finish design for login

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -5,5 +5,5 @@ body {
 	background-color: transparent;
 	font-size: 16px;
 	line-height: 1.4;
-	font-family: 'Roboto', serif;
+	font-family: myFirstFont;
 }
