--- a/src/css/structure.scss
+++ b/src/css/structure.scss
@@ -1,3 +1,12 @@
+// Main Colors
+$accent: null;
+$white: #ffffff;
+$black: #000000;
+$red: #C82B1D;
+$dark-gray: lighten($black, 20%);
+$gray: lighten($black, 40%);
+$light-gray: lighten($black, 60%);
+$lighter-gray: lighten($black, 80%);
 
 .wrapper {
 	position: absolute;
@@ -15,15 +24,111 @@
 
 .form {
     position: absolute;
-    width: 336px;
-    height: 468px;
+    width: 308px;
+    height: 419px;
     background-color: #fff;
     margin: auto;
     border-radius: 5px;
-    padding: 20px;
+    padding: 29px;
     left: 50%;
     top: 40%;
     margin-left: -180px;
     margin-top: -200px;
     box-shadow: 0px 0px 17px 0px rgba(0, 0, 0, 0.205);
+
+    div{
+        margin-top: -15px;
+    }
+        .forgot {
+        margin-top: -11px;
+        font-size: 12px;
+        color: #9b9b9b;
+        letter-spacing: 1px;
+        &:hover{
+            cursor: pointer;
+        }
+        .register {
+            margin-top: -11px;
+            color: #2F2D2E;
+            font-family: CircularStd;
+            font-size: 12px;
+            font-weight: 300;
+            line-height: 14px;
+            text-align: left;
+        }
+
+    }
+        .login-btn {
+        background-color: #C82B1D;
+        height: 45px;
+        margin-top: 11px;
+        cursor: pointer;
+        width: 100%;
+        border: 0;
+        padding: 16px 16px;
+        text-align: left;
+        color: $white;
+        transition: (.3s ease);
+        font-family: CircularStd;
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 17px;
+        }
+        .access-btn {
+            border: 1px solid #C82B1D;
+            width: 100%;
+            height: 45px;
+            padding: 12px 12px;
+            color: #C82B1D;
+            font-family: CircularStd;
+            font-size: 14px;
+            font-weight: 700;
+            line-height: 17px;
+            text-align: left;
+        }
+.login-header {
+    color: #2F2D2E;
+    font-family: CircularStd;
+    font-size: 24px;
+    font-weight: 900;
+    line-height: 53.65px;
+    text-align: left;
+  }
+
+
+.login-form{
+    position: relative;
+    margin-top: 25px;
+}
+label{
+    color: #7F7F7F;
+    font-family: CircularStd;
+    font-size: 12px;
+    font-weight: 300;
+    letter-spacing: -0.21px;
+    line-height: 14px;
+    text-align: left;
+}
+input {
+    background-color: #FFFFFF;
+    border: 0.5px solid rgba(151, 151, 151, 0.48);
+    box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.09);
+    width: 100%;
+    height: 36px;
+
+    outline: none;
+    display: block;
+    margin: 0 0 0px;
+    padding: 10px 15px;
+    box-sizing: border-box;
+    font-weight: 400;
+    transition: (.3s ease);
+    }
+    .uba-logo {
+        float: right;
+        width: 73.6px;
+        height: 40px;
+        margin-top: -41px;
+      }
+      
 }
