build app structure

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,6 +1,7 @@
 @import 'icons.css';
 @import 'structure.scss';
-@import 'dashboard.scss';
+@import 'navbar.scss';
+@import 'report.scss';
 
 body {
 	background-color: transparent;
