--- a/src/css/report.scss
+++ b/src/css/report.scss
@@ -4,7 +4,7 @@
     
 }
 
-td, th {
+td {
     background-color: #FFFFFF;
     border: 1px solid rgba(192, 192, 192, 0.35);
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.24), 0 0 2px 0 #8BC34A;
