--- a/src/css/navbar.scss
+++ b/src/css/navbar.scss
@@ -7,11 +7,24 @@
         box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.08);
         width: 100%;
         height: 60px;
+        display: flex;
+        justify-content: space-between;
     }
     .rewards-logo{
         height: 22px;
         margin: 15px 30px;
         width: 208px;
+    }
+    .profile-pic{
+        text-align: right;
+        margin-top: 14px;
+        margin-right: 50px;
+        background-image: url(https://marvel-live.freetls.fastly.net/canvas/2018/4/3b6c4cca24204055a4ed75e5ec6c50a1?quality=95&fake=.png);
+        background-size: 100%;
+        border: 1px solid #FFFFFF;
+        border-radius: 100%;
+        width: 32px;
+        height: 32px;
     }
 
     .side-nav {
@@ -133,19 +146,23 @@
         border: 0.5px solid #C0C0C0;
         width: 229px;
         height: 36px;
-        color: #9B9B9B;
+        color: #000;
         font-family: Lato;
         font-size: 13px;
         font-weight: 400;
         line-height: 16px;
         opacity: 0.7;
         text-align: left;
+        padding-left: 14px;
+
     }
 }
 
 
 .grid-items {
-    margin: 100px;
+    margin-top: 50px;
+    margin-right: 100px;
+    margin-left: 400px;
     height: 230px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -154,16 +171,32 @@
       "card1 card2 chart chart"
       "card3 card4 chart chart";
     grid-gap: 15px;
+    
 
     div {
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        padding: 21px;
         background-color: #FFFFFF;
         border: 0.5px solid #D6D6D6;
         /* box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);*/
  
         
+      }
+      h1 {
+        color: #4A4A4A;
+        font-family: CircularStd;
+        font-size: 30px;
+        font-weight: 700;
+        line-height: 36px;
+        text-align: left;
+      }
+      p{
+        margin-top: -34px;
+        color: #4A4A4A;
+        font-family: CircularStd;
+        font-size: 12px;
+        font-weight: 300;
+        line-height: 14px;
+        text-align: left;
       }
   }
   
@@ -183,10 +216,10 @@
   .chart { 
     grid-area: chart; }
   
-  .card1 { grid-area: card1; }
-  .card2 { grid-area: card2; }
-  .card3 { grid-area: card3; }
-  .card4 { grid-area: card4; }
+  .card1 { grid-area: card1; border-bottom: 2px solid #FF3D69!important;}
+  .card2 { grid-area: card2; border-bottom: 2px solid #00C3A2!important;}
+  .card3 { grid-area: card3; border-bottom: 2px solid #00C9E0!important;}
+  .card4 { grid-area: card4; border-bottom: 2px solid #7269D0!important;}
 
   a{
       text-decoration: none !important;
@@ -236,10 +269,14 @@
         height: 27px;
 
         &:hover{
+            cursor: pointer;
             border: none;
             background-color: #D42E12;
             border-radius: 13.5px;
             color: #fff;
+        }
+        &:focus{
+            border: none;
         }
     }
   }
