--- a/src/css/report.scss
+++ b/src/css/report.scss
@@ -11,10 +11,14 @@ th {
     line-height: 14px;
     text-align: left;
 }
-
+/*
+.table-body{
+    border: 1px solid #777777;
+}
+*/
 td {
     background-color: #FFFFFF;
-    border: 1px solid rgba(192, 192, 192, 0.35);
+   
     width: 941px;
     height: 50px;
     color: #777777;
