--- a/src/css/report.scss
+++ b/src/css/report.scss
@@ -1,3 +1,24 @@
+.table{
+    width: 100%;
+    
+    border-collapse: collapse;
+
+    .table-body {
+
+        background-color: #FFFFFF;
+        border: 1px solid rgba(192, 192, 192, 0.35);
+        height: 50px;
+        td {
+            color: #777777;
+            font-family: CircularStd;
+            font-size: 14px;
+            font-weight: 300;
+            line-height: 17px;
+            text-align: left;
+        }
+    }
+    
+}
 .report-page {
     margin-top: 50px;
     margin-right: 100px;
@@ -11,23 +32,7 @@ th {
     line-height: 14px;
     text-align: left;
 }
-/*
-.table-body{
-    border: 1px solid #777777;
-}
-*/
-td {
-    background-color: #FFFFFF;
-   
-    width: 941px;
-    height: 50px;
-    color: #777777;
-    font-family: CircularStd;
-    font-size: 12px;
-    font-weight: 500;
-    line-height: 14px;
-    text-align: left;
-}
+
 
 .table-footer {
     margin-top:34px;
