--- a/src/css/report.scss
+++ b/src/css/report.scss
@@ -1,5 +1,6 @@
 .table{
     width: 100%;
+    height: 60%;
     
     border-collapse: collapse;
 
@@ -23,6 +24,7 @@
     margin-top: 50px;
     margin-right: 100px;
     margin-left: 400px;
+    height: 100%;
 }
 th {
     color: #777777;
@@ -50,5 +52,23 @@ th {
         color: #000 !important;
         text-decoration: underline !important;
         cursor: pointer !important;
+    }
+
+    .page-scroll{
+        display: flex;
+        i {
+            font-size: 19px;
+            cursor: pointer;
+            border: 1px solid rgba(0, 0, 0, 0.1);
+            border-radius: 4px;
+            width: 30px;
+            height: 19px;
+            text-align: center;
+            margin-right: 15px;
+        }
+        .right{
+            margin-right: 0px !important;
+            margin-left: 15px !important;
+        }
     }
 }
