--- a/src/css/navbar.scss
+++ b/src/css/navbar.scss
@@ -337,7 +337,7 @@
     width: 196px;
     height: 312px;
 
-    a{  
+    span{  
         display: block;
         color: #777777;
         padding: 12px 16px;
@@ -355,6 +355,7 @@
         }
     }
     button {
+        display: none !important;
         border: 1px solid #2F2D2E;
         border-radius: 13.5px;
         width: 70px;
