--- a/src/css/report.scss
+++ b/src/css/report.scss
@@ -1,25 +1,4 @@
-.table{
-    width: 100%;
-    height: 60%;
-    
-    border-collapse: collapse;
 
-    .table-body {
-
-        background-color: #FFFFFF;
-        border: 1px solid rgba(192, 192, 192, 0.35);
-        height: 50px;
-        td {
-            color: #777777;
-            font-family: CircularStd;
-            font-size: 14px;
-            font-weight: 300;
-            line-height: 17px;
-            text-align: left;
-        }
-    }
-    
-}
 .report-page {
     margin-top: 50px;
     margin-right: 100px;
@@ -27,17 +6,43 @@
     height: 100%;
 
 }
-th {
+  
+  table {
+    border: 1px solid #ccc;
+    border-collapse: collapse;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 60%;
+    table-layout: fixed;
+  }
+  
+  
+  table tr {
+    background-color: #FFFFFF;
+    border: 1px solid rgba(192, 192, 192, 0.35);
+    padding: .35em;
+  }
+  
+  table th,
+  table td {
+    padding: .625em;
     color: #777777;
     font-family: CircularStd;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 17px;
+    text-align: left;
+  }
+  
+  table th {
     font-size: 12px;
+    text-transform: uppercase;
     font-weight: 500;
     line-height: 14px;
     text-align: left;
-}
-
-
-.table-footer {
+  }
+  .table-footer {
     margin-top:34px;
     display: flex;
     flex-direction: row;
@@ -73,3 +78,60 @@ th {
         }
     }
 }
+  
+  @media screen and (max-width: 600px) {
+    .report-page {
+        margin-top: 50px;
+        margin-right: 100px;
+        margin-left: 400px;
+        height: 100%;
+        width: 450px;
+    
+    }
+    table {
+      border: 0;
+    }
+  
+    table caption {
+      font-size: 1.3em;
+    }
+    
+    table thead {
+      border: none;
+      clip: rect(0 0 0 0);
+      height: 1px;
+      margin: -1px;
+      overflow: hidden;
+      padding: 0;
+      position: absolute;
+      width: 1px;
+    }
+    
+    table tr {
+      border-bottom: 3px solid #ddd;
+      display: block;
+      margin-bottom: .625em;
+    }
+    
+    table td {
+      border-bottom: 1px solid #ddd;
+      display: block;
+      font-size: .8em;
+      text-align: right;
+    }
+    
+    table td::before {
+      /*
+      * aria-label has no advantage, it won't be read inside a table
+      content: attr(aria-label);
+      */
+      content: attr(data-label);
+      float: left;
+      font-weight: bold;
+      text-transform: uppercase;
+    }
+    
+    table td:last-child {
+      border-bottom: 0;
+    }
+  }
